added new background

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ margin: 0;
 }
 
 body {
-background: url('https://wallpaperplay.com/walls/full/7/2/2/32755.jpg');
+background: url('github-images/gym-background-1.jpg');
 background-size: cover;
 height: 100vh;
 }
